--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -16,8 +16,8 @@ jobs:
         go-version: 1.15
       id: go
 
-    - name: Install Fyne tool
-      run: go get fyne.io/fyne/v2/cmd/fyne
+    - name: Install Fyne tools
+      run: go get fyne.io/fyne/v2/cmd/fyne && go get github.com/fyne-io/fyne-cross
         
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
