disable high precision LX200 by default and add option
SNPro 8 and other clients by default are not using high precision
mode with LX200.  Since there doesn't seem to be a way to query
the mount, we need to allow people to change the default to match
whatever the client (SkySafari, StarryNight, etc) assume to be true.

Fixes #51

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Install X11
-      run: sudo apt-get install -y xorg-dev
+    - name: Install X11/OpenGL
+      run: sudo apt-get update && sudo apt-get install -y xorg-dev
 
     - name: Set up Go 1.15
       uses: actions/setup-go@v1
