--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -10,17 +10,17 @@ jobs:
     - name: Install X11/OpenGL
       run: sudo apt-get update && sudo apt-get install -y xorg-dev
 
-    - name: Set up Go 1.15
+    - name: Set up Go 1.18
       uses: actions/setup-go@v1
       with:
-        go-version: 1.15
+        go-version: 1.18
       id: go
 
-    - name: Install Fyne tools
-      run: go get fyne.io/fyne/v2/cmd/fyne && go get github.com/fyne-io/fyne-cross
-        
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
+
+    - name: Install Fyne tools
+      run: make install-fyne && make install-fyne-cross
 
     - name: Tests
       run: make test
