--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -2,7 +2,7 @@ linters:
   enable:
     - asciicheck
     - ineffassign
-    - gocyclo
+    # - gocyclo
     - dupl
       # - funlen
     - gofmt
@@ -27,3 +27,5 @@ issues:
     - linters:
         - revive
       text: ALL_CAPS
+  exclude-files:
+    - ".*_test\\.go"
