--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -168,4 +168,4 @@ jobs:
         fail_ci_if_error: true
         flags: unittests
         token: '${{ secrets.CODECOV_TOKEN }}'
-        verbose: false
+        verbose: true
