--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,10 +14,6 @@ on:
   schedule:
     - cron: '0 20 * * 2'
 
-env:
-  GO_VERSION: '1.23.6'
-  GOLANGCI_LINT_VERSION: 'v1.63.4'
-
 jobs:
   build:
     name: Build
@@ -30,7 +26,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: ${{ env.GO_VERSION }}
+        go-version: ${{ vars.GO_VERSION }}
       id: go
 
     - name: Check out code into the Go module directory
@@ -43,7 +39,7 @@ jobs:
       run: make test
   
     - name: Build test binaries
-      run: PATH=${PATH}:~/go/bin make .build-test-binaries 
+      run: PATH=${PATH}:~/go/bin make -j4 .build-test-binaries 
 
   govulncheck:
     name: govulncheck
@@ -55,7 +51,7 @@ jobs:
     - name: govulncheck
       uses: golang/govulncheck-action@v1
       with:
-        go-version-input: '${{ env.GO_VERSION }}'
+        go-version-input: '${{ vars.GO_VERSION }}'
         go-package: ./...
 
   golangci:
@@ -67,15 +63,15 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version: '${{ vars.GO_VERSION }}'
 
       - uses: actions/checkout@v4
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        uses: golangci/golangci-lint-action@v7
         with:
           # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
-          version: '${{ env.GOLANGCI_LINT_VERSION }}'
+          version: '${{ vars.GOLANGCI_LINT_VERSION }}'
 
           # Optional: working directory, useful for monorepos
           # working-directory: somedir
@@ -130,7 +126,7 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v5
       with:
-        go-version: '${{ env.GO_VERSION }}'
+        go-version: '${{ vars.GO_VERSION }}'
 
 
     # Autobuild attempts to build any compiled languages (C/C++, C#, Go, Java, or Swift).
